@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Debian Cryptsetup Team <pkg-cryptsetup-devel@lists.alioth.debian.org>
 Uploaders: Jonas Meurer <mejo@debian.org>
-Build-Depends: debhelper (>= 5.0.0), libgcrypt11-dev, libdevmapper-dev (>= 2:1.02.24-4), libpopt-dev, uuid-dev, libselinux1-dev, libsepol1-dev, gettext, libtool, autoconf, automake1.9, quilt (>= 0.40), xsltproc, docbook-xsl
+Build-Depends: debhelper (>= 5.0.0), libgcrypt11-dev, libdevmapper-dev (>= 2:1.02.24-4), libpopt-dev, uuid-dev, libselinux1-dev, libsepol1-dev, gettext, libtool, autoconf, automake1.9, quilt (>= 0.40), xsltproc, docbook-xml, docbook-xsl
 Standards-Version: 3.8.0
 Homepage: http://luks.endorphin.org/
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-cryptsetup/cryptsetup/trunk
